fixed photo spacing on show and home pages

--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -1,18 +1,18 @@
 #home-page {
     background-color: gainsboro;
-    height: 86.7%;
+    min-height: 86.7%;
 }
 
 #home-header {
-    padding-top: 20px;
+    padding: 20px;
     margin-top: 0px;
-    margin-left: 10px;
 }
 
 #profile-info {
     display: grid;
     grid-gap: 15px;
     justify-items: center;
+    margin-top: 150px;
 }
 
 #name-button {
@@ -80,13 +80,13 @@
 #resize-smash {
     height: 250px;
     width: 250px;
-    margin: 0px 20px;
+    // margin: 0px 20px;
 }
 #basic-info {
     height: 100%;
     display: flex;
     width: 100%;
-    // flex-direction: column;
+  
     align-items: flex-end;
     justify-content: space-evenly
 }
@@ -96,8 +96,7 @@
     font-weight: 400;
     color: black;
     margin: 5px;
-    // display: flex;
-    // justify-content: center
+
 }
 
 .basic-id {
