--- a/app/assets/stylesheets/components/likes.scss
+++ b/app/assets/stylesheets/components/likes.scss
@@ -1,6 +1,6 @@
 #likes {
     background-color: gainsboro;
-    height: 86.7%;
+    min-height: 86.7%;
 }
 
 #like-header {
