--- a/app/assets/stylesheets/components/new_profile/profile0.scss
+++ b/app/assets/stylesheets/components/new_profile/profile0.scss
@@ -1,5 +1,5 @@
 .create-profile {
-    height: 86.7%;;
+    min-height: 86.7%;;
     // width:100vh;
     display: flex;
     flex-direction: column;
