--- a/app/assets/stylesheets/components/profile_show.scss
+++ b/app/assets/stylesheets/components/profile_show.scss
@@ -120,8 +120,8 @@
     flex-direction: column;
     justify-content: flex-end;
     font-size: 35px; 
-    margin: 0px;
-    margin-right: 0px;
+    margin: 0px 20px;
+    
 
 
 }
@@ -134,6 +134,7 @@
 #age-location {
     display: flex;
     font-size: 19px;
+    margin: 0px 20px
 }
 
 #edit-profile {
